--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 <body>
   <header role="banner">
     <div class="container">
-      <h1 class="site-title" aria-label="Service Locks and Repairs Website">Service Locks & Repairs</h1>
+      <h1 class="site-title" aria-label="Service Locks and Repairs Website">Zuu Caster Service&Repair</h1>
     </div>
   </header>
   <main role="main" class="container" aria-label="List of service offerings">
