--- a/index.html
+++ b/index.html
@@ -753,9 +753,9 @@
         RM10 6hr/TSM tool
       </label>
       <label class="rental-option" role="option" aria-selected="false" tabindex="0" for="option3">
-        <input type="radio" id="option3" name="rental" value="RM10 1days/Pandora tool" />
+        <input type="radio" id="option3" name="rental" value="RM150 10days/Pandora tool" />
         <span class="custom-radio" aria-hidden="true"></span>
-        RM10 1days/Pandora tool
+        RM150 10days/Pandora tool
       </label>
       <label class="rental-option" role="option" aria-selected="false" tabindex="0" for="option4">
         <input type="radio" id="option4" name="rental" value="RM100 10days/Sigma tool" />
@@ -763,7 +763,7 @@
         RM100 10days/Sigma tool
       </label>
       <label class="rental-option" role="option" aria-selected="false" tabindex="0" for="option5">
-        <input type="radio" id="option5" name="rental" value="RM150 10days" />
+        <input type="radio" id="option5" name="rental" value="RM150 Pandora 10days" />
         <span class="custom-radio" aria-hidden="true"></span>
         RM150 10days
       </label>
