--- a/index.html
+++ b/index.html
@@ -1048,6 +1048,156 @@
 </html>
 
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Bottom Banner Promotion - Sliding RGB Text</title>
+<style>
+  /* Import Inter font from Google Fonts */
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
+
+  :root {
+    --font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+    --banner-bg: #ffffff;
+    --banner-shadow: rgba(0, 0, 0, 0.1);
+    --banner-height: 5.5rem;
+  }
+
+  /* Reset and base styles */
+  body {
+    margin: 0;
+    padding-bottom: var(--banner-height); /* Reserve space for banner */
+    background: var(--banner-bg);
+    font-family: var(--font-family);
+    color: #374151; /* neutral gray */
+    min-height: 100vh;
+  }
+
+  /* Bottom Banner Container */
+  .bottom-banner {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: var(--banner-height);
+    background: var(--banner-bg);
+    box-shadow: 0 -4px 10px var(--banner-shadow);
+    border-top-left-radius: 0.75rem;
+    border-top-right-radius: 0.75rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    z-index: 10000;
+  }
+
+  .banner-inner {
+    max-width: 1200px;
+    width: 100%;
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  /* Scroll wrapper to clip the text */
+  .scrolling-text-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+
+  /* The sliding text container */
+  .scrolling-text {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    white-space: nowrap;
+    will-change: transform;
+    animation: slide-left 30s linear infinite; /* sped up from 15s to 30s */
+    font-weight: 700;
+    font-size: 3rem; /* 48px */
+    font-family: var(--font-family);
+    user-select: none;
+  }
+
+  /* Repeat the text twice for seamless animation */
+  .scrolling-text > span {
+    margin-right: 3rem; /* spacing between repeats */
+    display: inline-flex;
+  }
+
+  /* Color segments */
+  .color-red {
+    color: rgb(220, 38, 38); /* red-600 */
+  }
+  .color-blue {
+    color: rgb(37, 99, 235); /* blue-600 */
+  }
+  .color-green {
+    color: rgb(22, 163, 74); /* green-600 */
+  }
+
+  /* Animation keyframes sliding from right to left */
+  @keyframes slide-left {
+    0% {
+      transform: translateX(0%);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
+
+  /* Responsive font size adjustments */
+  @media (max-width: 640px) {
+    .scrolling-text {
+      font-size: 2rem; /* 32px */
+    }
+  }
+  @media (max-width: 400px) {
+    .scrolling-text {
+      font-size: 1.5rem; /* 24px */
+    }
+  }
+
+</style>
+</head>
+<body>
+
+<!-- Bottom Banner -->
+<section class="bottom-banner" role="region" aria-label="Promotion banner">
+  <div class="banner-inner">
+    <div class="scrolling-text-wrapper" tabindex="0">
+      <div class="scrolling-text" aria-live="polite" aria-atomic="true">
+        <span>
+          <span class="color-red">Samsung</span>&nbsp;
+          <span class="color-blue">FRP</span>&nbsp;
+          <span class="color-green">RM70</span>&nbsp;
+          <span>/</span>&nbsp;
+          <span class="color-red">Xiaomi</span>&nbsp;
+          <span class="color-blue">FRP</span>&nbsp;
+          <span class="color-green">RM50</span>
+        </span>
+        <span aria-hidden="true">
+          <span class="color-red">Samsung</span>&nbsp;
+          <span class="color-blue">FRP</span>&nbsp;
+          <span class="color-green">RM70</span>&nbsp;
+          <span>/</span>&nbsp;
+          <span class="color-red">Xiaomi</span>&nbsp;
+          <span class="color-blue">FRP</span>&nbsp;
+          <span class="color-green">RM50</span>
+        </span>
+      </div>
+    </div>
+  </div>
+</section>
+
+</body>
+</html>
+
+
 
 
 
