--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
     </ul>
     <button class="btn-unlock" id="unlock-btn" type="button" aria-haspopup="dialog" aria-controls="unlock-modal" aria-expanded="false">Unlocked Now</button>
   </main>
-  <footer role="contentinfo">
-    &copy; 2024 Service Locks & Repairs. All rights reserved.
+
+   All rights reserved.
   </footer>
   <!-- Modal -->
   <div class="modal-overlay" id="unlock-modal" role="dialog" aria-modal="true" aria-labelledby="modal-title" tabindex="-1" aria-hidden="true">
@@ -1196,6 +1196,9 @@
 
 </body>
 </html>
+
+<footer role="contentinfo">
+    &copy; 2024 Service Locks & Repairs
 
 
 
